--- a/app/assets/stylesheets/components/shared/c-mobile-menu.scss
+++ b/app/assets/stylesheets/components/shared/c-mobile-menu.scss
@@ -1,7 +1,7 @@
 .c-mobile-menu {
   //display: none;
   display: block;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
